k8s/celery-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: celery
  namespace: craicbox
  labels:
    app: celery
spec:
  selector:
    matchLabels:
      app: celery
  replicas: 1
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
      - name: master
        image: rg.nl-ams.scw.cloud/craicbox/craicbox_celery
        imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
