k8s/service-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: service
  namespace: craicbox
  labels:
    app: service
spec:
  selector:
    matchLabels:
      app: service
  replicas: 1
  template:
    metadata:
      labels:
        app: service
    spec:
      containers:
      - name: master
        image: rg.nl-ams.scw.cloud/craicbox/craicbox_service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
      imagePullSecrets:
        - name: regcred
