k8s/service-tests-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: service-tests
  name: service-tests
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: service-tests
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: service-tests
    spec:
      containers:
      - args:
        - python
        - -m
        - unittest
        - discover
        image: service-tests
        imagePullPolicy: ""
        name: service-tests
        resources: {}
        workingDir: /artmaster
      restartPolicy: Always
      serviceAccountName: ""
status: {}
