k8s/service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: craicbox
  labels:
    app: service
spec:
  ports:
  - name: service
    port: 443
    targetPort: 5001
  selector:
    app: service
