k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: craicbox
  labels:
    app: ui
spec:
  ports:
  - name: ui
    port: 443
    targetPort: 80
  selector:
    app: ui
